[package]
name = "notion-to-jarkup"
version = "0.5.0"
edition = "2024"
description = "Convert Notion blocks into jarkup JSON."
authors = ["Chomolungma Shirayuki"]
repository = "https://github.com/46ki75/notion-to-jarkup"
license = "MIT"
documentation = "https://docs.rs/notion-to-jarkup"
categories = ["web-programming", "parsing", "data-structures"]
keywords = ["notion"]
readme = "./README.md"

[dependencies]
async-recursion = "^1.1"
html-meta-scraper = "^0.1"
jarkup-rs = "^0.4"
notionrs = "1.0.0-beta.6"
notionrs_types = "1.0.0-rc.9"
reqwest = { version = "0.12.21", default-features = false, features = [
    "rustls-tls",
] }
thiserror = "2"
url = "2.5"

[dev-dependencies]
dotenvy = "0.15.7"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
