[package]
name = "notion-to-jarkup"
version = "0.13.0"
edition = "2024"
description = "Convert Notion blocks into jarkup JSON."
authors = ["Chomolungma Shirayuki"]
repository = "https://github.com/46ki75/notion-to-jarkup"
license = "MIT"
documentation = "https://docs.rs/notion-to-jarkup"
categories = ["web-programming", "parsing", "data-structures"]
keywords = ["notion"]
readme = "./README.md"

[dependencies]
async-recursion = "^1.1"
futures = "0.3.32"
html-meta-scraper = "^0.2"
jarkup-rs = "^0.7.0"
notionrs = "0.9.0"
notionrs_types = "0.7.0"
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "http2",
    "gzip",
] }
thiserror = "2"
url = "2.5"

[dev-dependencies]
dotenvy = "0.15.7"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
